# nsreroot

./: .clang-format  .clang-tidy  .dir-locals.el  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/actions/ghaction-cmake/: Dockerfile  action.yml  entrypoint
.github/workflows/: ci.yml  main.yml
src/: nsreroot-main.cpp  nsreroot.cpp  nsreroot.hpp
